--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "description": "Chromium Binary for AWS Lambda and Google Cloud Functions",
+  "main":"build/index.js",
    "scripts": {
             "start": "node build/index.js"
         },
